reintegrated en passant and castling